--- a/src/components/apps/FileManager.css
+++ b/src/components/apps/FileManager.css
@@ -174,7 +174,9 @@
   font-size: 10px;
   color: #666;
   white-space: nowrap;
-  min-width: 120px;
+  min-width: 200px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /* Old repair progress (remove) */
